--- a/ECommerceApp/app/src/main/res/layout/activity_main.xml
+++ b/ECommerceApp/app/src/main/res/layout/activity_main.xml
@@ -22,6 +22,7 @@
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_marginVertical="80dp"
+        android:inputType="textPassword"
         android:hint="@string/enterpassword"
         android:textColorHint="@color/yellow"
         android:layout_below="@id/username"/>
