--- a/ECommerceApp/app/src/main/res/values/colors.xml
+++ b/ECommerceApp/app/src/main/res/values/colors.xml
@@ -8,4 +8,7 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="yellow">#FFF200</color>
+    <color name="colorPrimary">#8F0B30</color>
+    <color name="colorPrimaryDark">#A61829</color>
+    <color name="colorAccent">#AF0937</color>
 </resources>
